tests/ui/indexing/index-bot.rs
fn main() {
    (return)[0]; //~ ERROR cannot index into a value of type `!`
}
